<resources>   
    <!-- All the Colors for the application --> 
    <color name="black">#000000</color>
    <color name="green">#285000</color>
    <color name="greenLight">#03c000</color>
    <color name="transparent">#00000000</color>
    
    <!-- All the Image Descriptions -->
    <string name="description1">Background for option configure</string>
    <string name="back_button_desc">Back Button</string>
    
    <!-- Main Screen Specific Strings -->
    <string name="button_configure">Add Class</string>
    <string name="button_start_new_quarter">Reset Quarter</string>
    <string name="text_header">Your Schedule For:</string>
    <string name="configure_screen_title">Configure PolySchedule</string>
    <string name="clear_data">Clear Course Data</string>
	<string name="confirm_clear">Are you sure you want to clear all course data?</string>
	
    <!-- Configure Activity Specific Strings -->
    <string name="back_button_text">Back</string>
    <string name="add_class">Add A Class</string>
	<string name="course_select_header">Enter Course</string>
	<string name="building_select_header">Enter Location</string>
	<string name="days_of_week">Days of the Week</string>
	<string name="room_number">Enter Room #</string>
	<string name="select_subject">Select Subject</string>
	<string name="select_building">Select Building</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="start_time">Start Time</string>
	<string name="end_time">End Time</string>
	<string name="time">Time</string>
	<string name="professor">Professor</string>
	<string name="name">Name</string>
	<string name="save">Save</string>
	<string name="insert_course_number">Enter Course #</string>
    
    <!-- Universal Strings -->
    <string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="dash">-</string>
	<string name="pound_sign">#</string>
	
	<!-- Other Strings -->
	<string name="placeholder">COMS 101\n7:10 &#8211; 8 AM</string>
	<string name="app_name">PolySchedule</string>
    <string name="logoimage">LogoImage</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Poly Schedule</string>
    <string name="course_prefix_title">Course Prefixes</string>
    <string name="building_list_title">Building Names</string>
    <string name="start_times_title">Start Times</string>
    <string name="end_times_title">End Times</string>
    <string name="okButton">OK</string>
    <string name="editButton">Edit</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_help_screen">About PolySchedule</string>
    <string name="instructions">PolySchedule offers many unique features which can be slightly confusing to new users. Below are all the features you have access to while using PolySchedule.\n\n&quot;Add Class&quot; - This button will take you to the configure screen where you can add classes\n\n&quot;Reset Quarter&quot; - This button will reset your entire schedule for the next quarter\n\n&quot;Left Arrow&quot; - This button will change the schedule\'s day to the previous day\n\n&quot;Right Arrow&quot; - This button will change the schedule\'s day to the following day\n\nTapping a Course - This will display a detailed description of the course selected\n\nLong Tapping a Course - This will prompt you whether you want to delete the course or not</string>
        
	
</resources>