<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@layout/backrepeat"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_Add_A_Class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingLeft="15dp"
                android:text="@string/add_class"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btnbackday2" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Spacer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_padding"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Spacer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="@string/course_select_header"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/select_Subject_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@layout/custombutton"
                    android:gravity="center"
                    android:maxLength="@integer/max_characters_course_selection"
                    android:text="@string/select_subject"
                    android:width="@dimen/button_width_max" />

                <EditText
                    android:id="@+id/editText_Course_Number"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/select_Subject_Button"
                    android:background="@layout/custom_text_edit"
                    android:ems="10"
                    android:hint="@string/insert_course_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Spacer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_padding"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Spacer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_Building_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="@string/building_select_header"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/select_Building_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@layout/custombutton"
                    android:maxLength="@integer/max_characters_course_selection"
                    android:maxLines="@integer/max_lines_two"
                    android:text="@string/select_building"
                    android:width="@dimen/button_width_max" />

                <EditText
                    android:id="@+id/editText_Room_Number"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/select_Building_Button"
                    android:background="@layout/custom_text_edit"
                    android:ems="10"
                    android:hint="@string/room_number"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="5" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Spacer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_padding"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/Spacer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_Days_Of_Week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="@string/days_of_week"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/monday"
                    android:textSize="15dp" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/checkBox1"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/checkBox1"
                    android:text="@string/tuesday"
                    android:textSize="15dp" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/checkBox2"
                    android:text="@string/wednesday"
                    android:textSize="15dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <LinearLayout
                    android:id="@+id/Spacer14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="35dp" >
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textSize="15dp" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Spacer8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_padding"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/time"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/Spacer9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/start_Time_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@layout/custombutton"
                    android:text="@string/start_time" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/dash"
                    android:textSize="@dimen/title_size" />

                <Button
                    android:id="@+id/end_Time_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:background="@layout/custombutton"
                    android:text="@string/end_time" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Spacer10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_padding"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_Professor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="@string/professor"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/Spacer11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp" >
                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/editText_Professor_Name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@layout/custom_text_edit"
                    android:ems="10"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/Spacer12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Spacer13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@layout/custombutton"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/save"
                android:textSize="35dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>