<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@layout/backrepeat" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/MainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <ImageView
            android:id="@+id/psLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/logoimage"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/Spacer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >
        </LinearLayout>

        <TextView
            android:id="@+id/instrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"            
            android:text="@string/instructions"
            android:textStyle="bold" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="18dp"
            android:background="@layout/custombutton"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/okButton" />        
    </LinearLayout>

</ScrollView>