<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@layout/backrepeat" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/MainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <ImageView
            android:id="@+id/psLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/logoimage"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/headerText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/text_header"
                android:textColor="@color/green"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forwardDayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/btnforwardday2" />

            <Button
                android:id="@+id/backDayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/forwardDayButton"
                android:layout_alignBottom="@+id/forwardDayButton"
                android:layout_alignParentLeft="true"
                android:background="@drawable/btnbackday2" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Spacer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

        </LinearLayout>

        <Button
            android:id="@+id/configureBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="18dp"
            android:background="@layout/custombutton"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/button_configure" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@layout/custombutton"
            android:clickable="true"
            android:text="@string/button_start_new_quarter" />

    </LinearLayout>

</ScrollView>